Added stream response method for collecting many stations workloads via goroutines
